<resources>

    <string name="app_name">Go4LunchJava</string>

    <!-- Says it already exist ??
    <string name="default_web_client_id">409703708395-27s8b7caag0hmc68m4dqj8tu1d2ll4lt.apps.googleusercontent.com</string>
!-->

    <string name="facebook_app_id">2465497706899284</string>
    <string name="fb_login_protocol_scheme">fb2465497706899284</string>

    <string name="google_map_api">AIzaSyCyBSxXwWer9dMDvga3zBBvKZy4cOgMsGg</string>
    <string name="google_place_api_key">AIzaSyDSpFo8O861EgPYmsRlICS0sRs0zGEsrS4</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Map View</string>
    <string name="bottom_navigation_menu_list">List View</string>
    <string name="bottom_navigation_menu_workmates">Workmates</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="location_null_message">Couldn\'t reach a location :/.\nMake sure to activate GPS and data.</string>
    <string name="restaurant_search">Looking in the area...</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="empty_restaurant_list">Let\'s find where to have lunch !  Go to the map</string>
    <string name="search">Search</string>
    <string name="search_hint_restaurant">Search in the list</string>
    <string name="is_eating_at">\u0020is eating at\u0020</string>
    <string name="has_not_decided_yet">\u0020has not decided yet.</string>
    <string name="is_joining">\u0020is joining in!</string>
    <string name="no_phone">No phone number communicated.</string>
    <string name="no_website">No website communicated.</string>
    <string name="notif_title">Ton repas de ce midi t\'attends!</string>
    <string name="send">Send</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="no_details_found_for_restaurant">We couldn\'t find any details about this restaurant :/</string>

    <!-- HOUR DETAILS-->
    <string name="closed_today">Closed today</string>
    <string name="hours_not_communicated">Opening hours not communicated</string>
    <string name="open_until">Open until\u0020</string>
    <string name="closing_soon">Closing soon</string>
    <string name="closed_until">Closed until\u0020</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="app_description">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="radius">Radius</string>
    <string name="notifications">Notifications</string>
    <string name="radius_settings_description">Radius in which to look for restaurants on the map.</string>
    <string name="allow_notifications_for_lunch">Allow notifications for lunch</string>
    <string name="open_now">Open now</string>
    <string name="closed">Closed</string>


</resources>
