<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_radius_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_radius_settings_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_radius_settings_title"
            android:text="@string/radius_settings_description" />

        <TextView
            android:id="@+id/tv_settings_radius_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_radius_settings_description"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            tools:text="30" />

        <SeekBar
            android:id="@+id/seek_bar_radius_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_radius_settings_description"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@id/tv_settings_radius_progress"
            android:max="9" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="@color/quantum_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tv_notif_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_notif_settings_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_notif_settings_title"
            android:layout_toStartOf="@id/switch_notif_settings"
            android:text="@string/allow_notifications_for_lunch" />

        <Switch
            android:id="@+id/switch_notif_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_notif_settings_description"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>


</LinearLayout>